deployment/k8s/jots/service_jots.yaml
apiVersion: v1
kind: Service
metadata:
  name: jots-service
spec:
  type: NodePort
  selector:
    app: jots
  ports:
    - port: 80
      targetPort: 5000
