deployment/k8s/jots/ingress_jots.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jots-ingress
spec:
  rules:
  - host: dev.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: jots-service
          servicePort: 80
